# haskell-midi

./: .gitignore  LICENSE  haskell-midi.cabal  main.pl  make-haste  make-haste-opt
public/: haste.js
src/: Main.hs  Midi.hs  WebSocket.hs
src-haste/: Main.hs
src-hs/: EncodingChecks.hs  Main.hs  Midi.hs  Parser.hs
