name:                haskell-midi
version:             0.1.0.0
license-file:        LICENSE
author:              Christian Lavoie
maintainer:          clavoie@sandreckoning.com
build-type:          Simple
cabal-version:       >=1.10

executable haskell-midi
    build-depends:
        aeson,
        attoparsec,
        base >=4.6 && <4.7,
        bytestring,
        cereal,
        QuickCheck,
        split,
        websockets

    default-language:
        Haskell2010

    hs-source-dirs:
        src-hs

    main-is:
        Main.hs

    ghc-options:
        -Wall -Werror

executable checks-encoding
    build-depends:
        aeson,
        attoparsec,
        base >=4.6 && <4.7,
        bytestring,
        cereal,
        hspec,
        HUnit,
        QuickCheck,
        quickcheck-assertions

    default-language:
        Haskell2010

    hs-source-dirs:
        src-hs

    main-is:
        EncodingChecks.hs

    ghc-options:
        -Wall -Werror
